# digital-twin-simulation-based-

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: qos_override.yaml  ros2_control.yaml
launch/: digital_twin.launch.xml  gazebo_digital_twin.launch.xml
pythonfiles/: anomaly_detection.py
rviz/: rviz_config.rviz
scripts/: analyze_bag.py  record_bag.sh
urdf/: body.xacro  digital_twin.urdf.xacro  ros2_control.xacro
